STM32_Projects/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:59:00 **** Incremental Build of configuration Debug for project SWITCH2 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:41:43: error: lvalue required as left operand of assignment
   41 |                 if((switch_status() ==  1)= c_count)
      |                                           ^
../Src/main.c:47:20: error: subscripted value is neither array nor pointer nor vector
   47 |             {led_on[i];
      |                    ^
../Src/main.c:50:27: error: subscripted value is neither array nor pointer nor vector
   50 |             case 1: led_on[0];
      |                           ^
../Src/main.c:53:13: error: duplicate case value
   53 |             case 1: led_on[1];
      |             ^~~~
../Src/main.c:50:13: note: previously used here
   50 |             case 1: led_on[0];
      |             ^~~~
../Src/main.c:53:27: error: subscripted value is neither array nor pointer nor vector
   53 |             case 1: led_on[1];
      |                           ^
../Src/main.c:55:48: error: subscripted value is neither array nor pointer nor vector
   55 |                                  case 2: led_on[2];
      |                                                ^
../Src/main.c:57:48: error: subscripted value is neither array nor pointer nor vector
   57 |                                  case 3: led_on[3];
      |                                                ^
make: *** [Src/subdir.mk:37: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
